@@ -246,4 +246,4 @@ Dist::Zilla::Plugin::UploadToCPAN = 0
 
 [Prereqs]
 ;authordep Pod::Weaver::Section::Contributors = 0
-;authordep Dist::Zilla::Plugin::GenerateFile::ShareDir = 0
+;authordep Dist::Zilla::Plugin::GenerateFile::FromShareDir = 0.006
