@@ -29,4 +29,4 @@ Git::GatherDir.exclude_filename = CONTRIBUTING.pod
 
 [Prereqs]
 ;authordep Pod::Weaver::Section::Contributors = 0
-;authordep Dist::Zilla::Plugin::GenerateFile::ShareDir = 0
+;authordep Dist::Zilla::Plugin::GenerateFile::FromShareDir = 0.006
