@@ -2,8 +2,12 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
 0.001005
  [Added / develop requires]
+ - Dist::Zilla::Plugin::GenerateFile::FromShareDir 0.006
  - English
  - Software::License::Perl_5
+
+ [Added / runtime requires]
+ - Dist::Zilla::Plugin::GenerateFile::FromShareDir 0.006
 
  [Changed / develop requires]
  - Test::More 0.88 → 0.96
@@ -11,11 +15,15 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Changed / develop suggests]
  - Dist::Zilla::PluginBundle::Author::KENTNL 2.025001 → 2.025003
 
+ [Removed / develop requires]
+ - Dist::Zilla::Plugin::GenerateFile::ShareDir
+
  [Removed / runtime recommends]
  - Path::Tiny 0.058
 
  [Removed / runtime requires]
  - Carp
+ - Dist::Zilla::Plugin::GenerateFile::ShareDir 0.006
  - Path::Tiny
 
 0.001004 2015-07-05T06:07:52Z
