@@ -1,10 +1,12 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-CONTRIBUTING
 
 {{$NEXT}}
+ - switched from [GenerateFile::ShareDir] to [GenerateFile::FromShareDir], closes #1
+
  [Dependencies::Stats]
  - Dependencies changed since 0.001004, see misc/*.deps* for details
- - develop: +2 ↑1 (suggests: ↑1)
- - runtime: -2 (recommends: -1)
+ - develop: +3 ↑1 -1 (suggests: ↑1)
+ - runtime: +1 -3 (recommends: -1)
 
 0.001004 2015-07-05T06:07:52Z 0f96d87
  [Dependencies::Stats]
